services/keycloak-realms/templates/network-policy-keycloak.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: keycloak
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: keycloak
  ingress:
    - toPorts:
      - ports:
        - protocol: TCP
          port: "8080"
      fromEndpoints:
        - matchLabels:
            k8s:service-class: capi
        - matchLabels:
            k8s:service-class: wapi
        - matchLabels:
            k8s:service-class: capi-pcidss
